--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,11 @@
     <script src="/public/lib/angular-simple-logger/dist/angular-simple-logger.min.js"></script>
     <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
     <script src="/public/lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
+    <!-- Application Source Code -->
+    <script src="app/app.js"></script>
+    <script src="app/config/listings.client.routes.js"></script>
+    <script src="app/factories/listings.client.factory.js"></script>
+    <script src="app/controllers/listings.client.controller.js"></script>
   </head>
   <body ng-app="directoryApp">
     <div class="container">
@@ -25,9 +30,9 @@
           <!-- Add a ui-sref property to the anchor tags to allow navigation between different states -->
           <nav>
             <ul class="nav nav-pills">
-              <li><a>List View</a></li>
-              <li><a>Map View</a></li>
-              <li><a>Create New Listing</a></li>
+              <li><a ui-sref = 'listings.view'>List View</a></li>
+              <li><a ui-sref = 'listings.map'>Map View</a></li>
+              <li><a ui-sref = 'listings.create'>Create New Listing</a></li>
             </ul>
           </nav>
         </div>
@@ -35,10 +40,6 @@
       <div ui-view></div>
     </div>
 
-    <!-- Application Source Code -->
-    <script src="app/app.js"></script>
-    <script src="app/config/listings.client.routes.js"></script>
-    <script src="app/factories/listings.client.factory.js"></script>
-    <script src="app/controllers/listings.client.controller.js"></script>
+
   </body>
 </html>
