--- a/client/index.html
+++ b/client/index.html
@@ -4,21 +4,7 @@
     <base href="/">
     <link rel="stylesheet" href="/public/lib/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <!-- Dependencies -->
-    <script src="/public/lib/angular/angular.js"></script>
-    <script src="/public/lib/jquery/dist/jquery.min.js"></script>
-    <script src="/public/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/public/lib/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="/public/lib/angular-bootstrap/ui-bootstrap.js"></script>
-    <script src="/public/lib/lodash/dist/lodash.min.js"></script>
-    <script src="/public/lib/angular-simple-logger/dist/angular-simple-logger.min.js"></script>
-    <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
-    <script src="/public/lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
-    <!-- Application Source Code -->
-    <script src="app/app.js"></script>
-    <script src="app/config/listings.client.routes.js"></script>
-    <script src="app/factories/listings.client.factory.js"></script>
-    <script src="app/controllers/listings.client.controller.js"></script>
+
   </head>
   <body ng-app="directoryApp">
     <div class="container">
@@ -30,7 +16,7 @@
           <!-- Add a ui-sref property to the anchor tags to allow navigation between different states -->
           <nav>
             <ul class="nav nav-pills">
-              <li><a ui-sref = 'listings.view'>List View</a></li>
+              <li><a ui-sref = 'listings.list'>List View</a></li>
               <li><a ui-sref = 'listings.map'>Map View</a></li>
               <li><a ui-sref = 'listings.create'>Create New Listing</a></li>
             </ul>
@@ -39,7 +25,20 @@
       </div>
       <div ui-view></div>
     </div>
-
-
+    <!-- Dependencies -->
+    <script src="/public/lib/angular/angular.js"></script>
+    <script src="/public/lib/jquery/dist/jquery.min.js"></script>
+    <script src="/public/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/public/lib/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="/public/lib/angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="/public/lib/lodash/dist/lodash.min.js"></script>
+    <script src="/public/lib/angular-simple-logger/dist/angular-simple-logger.min.js"></script>
+    <script async defer src='//maps.googleapis.com/maps/api/js?key=AIzaSyCIDdTWH6gA5aVHW8qv_sJ6dx0kDckf4HY&sensor=false'></script>
+    <script src="/public/lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
+    <!-- Application Source Code -->
+    <script src="app/app.js"></script>
+    <script src="app/config/listings.client.routes.js"></script>
+    <script src="app/factories/listings.client.factory.js"></script>
+    <script src="app/controllers/listings.client.controller.js"></script>
   </body>
 </html>
